releases/R2018b and older/templates/azuredeployLinux18b.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01-preview/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Server VM Instance Size": {
            "type": "string",
            "defaultValue": "Standard_D4s_v3",
            "metadata": {
                "description": "Each VM instance will run multiple workers. Select a VM size that is appropriate for your needs. It is recommended that you choose a VM size where the number of cores on your VM match the number of workers per VM you plan on using."
            }
        },
        "instanceCount": {
            "type": "int",
            "defaultValue": 2,
            "metadata": {
                "description": "Number of VM instances (24 or less)."
            },
            "maxValue": 24,
            "minValue": 1
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Admin username on all VMs."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Admin password on all VMs."
            }
        },
        "Allow connections from": {
      "type": "string",
      "metadata": {
        "description": "String identifying the client CIDR or IP range which will be allowed to use the solution."
      }
    }
    },
    "variables": {
        "AppGatewaySize": "Standard_Small",
        "AppGatewayCount": 1,
        "mpsDNSName": "[concat('mps',uniqueString( resourceGroup().id))]",
        "storageAccountName": "[concat('serverlog',uniqueString( resourceGroup().id))]",
        "storageAccountType": "Standard_LRS",
        "vmssName": "vmss1",
        "namingInfix": "[toLower(substring(concat(variables('vmssName'), uniqueString(resourceGroup().id)), 0, 9))]",
        "longNamingInfix": "[toLower(variables('vmssName'))]",
        "addressPrefix": "10.0.0.0/16",
        "subnetPrefix": "10.0.0.0/24",
        "virtualNetworkName": "[concat(variables('namingInfix'), '-vnet')]",
        "publicIPAddressName": "[concat(variables('namingInfix'), '-pip')]",
        "subnetName": "[concat(variables('namingInfix'), 'subnet')]",
        "subnetRef": "[concat(variables('virtualNetworkID'),'/subnets/',variables('subnetName'))]",
        "nicName": "[concat(variables('namingInfix'), 'nic')]",
        "nicName2": "[concat(variables('namingInfix'), 'nicserv')]",
        "ipConfigName": "[concat(variables('namingInfix'), 'ipconfig')]",
        "virtualNetworkID": "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
        "appGwPublicIPAddressName": "[concat(variables('namingInfix'), '-pip')]",
        "appGwName": "[concat(variables('namingInfix'), '-agw')]",
        "appGwPublicIPAddressID": "[resourceId('Microsoft.Network/publicIPAddresses',variables('appGwPublicIPAddressName'))]",
        "appGwID": "[resourceId('Microsoft.Network/applicationGateways',variables('appGwName'))]",
        "appGwSubnetName": "[concat(variables('namingInfix'),'appGwSubnet')]",
        "appGwSubnetPrefix": "10.0.1.0/24",
        "appGwSubnetID": "[concat(variables('virtualNetworkID'),'/subnets/',variables('appGwSubnetName'))]",
        "appGwFrontendPort": 8000,
        "appGwBackendPort": 8000,
        "mpsHttpPortVar": 9910,
        "mpsFrontEndPort": 443,
        "mpsHttpsPortVar": 9920,
        "appGwBePoolName": "[concat(variables('namingInfix'), 'appGwBepool')]",
        "networkSecurityGroupName": "[concat(variables('namingInfix'), '-rdp-nsg')]",
        "publicIPAddressNameMachine": "servermachine-public-ip",
        "licservernicName": "servermachine-nic",
        "vmName": "servermachine",
        "applicationGatewayID": "[resourceId('Microsoft.Network/applicationGateways',variables('appGwName'))]",
        "frontendCertPassword": "x509",
        "frontendCertData": "MIIQeQIBAzCCED8GCSqGSIb3DQEHAaCCEDAEghAsMIIQKDCCBl8GCSqGSIb3DQEHBqCCBlAwggZMAgEAMIIGRQYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQYwDgQI4matunPic3UCAggAgIIGGDID3/Msop2I9/1k1zGL79jvw5xP/TKd69zcR4USty/6vSBwBeoHAOv8JI5ttwxItUlmHzfHQg9hAf6n6QTiagIPNUQMnyd6dV5Bmdj/jRwk4T91lrprihuLKPsHucA5QCsZpoX+nvQxAEWIstaqPT+zvpG4MIo2pH4RmlgXh2jY0Iu0VgjZx7nShJgXDc/k1XbsQGTmFVRdwAoJqp45ulwYiGkodOkmDmAeBEIRtJWj5o+MAMWEPM+E02S5+xixiSBBqWpVChW4pmS1ykJD1wNyhFM/yWZbKRsu6yjOr/aKAZwkQNwOFlZatHO2lqgOQll4Hos [...]
        "providerID": "D36A3EDC-0566-4EE4-86D3-64F20D2DDA06",
        "tagsForAll": {
            "provider": "[variables('providerID')]"
        }
    },
    "resources": [
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2017-03-01",
      "location": "[resourceGroup().location]",
      "tags": {
                "Description": "Network Security Group to control access to resources",
                "provider": "[variables('providerID')]"
            },
      "properties": {
        "securityRules": [
            {
                "name": "default-allow-mps-port443",
                "properties": {
                    "priority": 1000,
                    "sourceAddressPrefix": "[parameters('Allow connections from')]",
                    "protocol": "Tcp",
                    "destinationPortRange": "443",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*"
                }
            },
            {
                "name": "default-allow-mps-port9910",
                "properties": {
                    "priority": 1001,
                    "sourceAddressPrefix": "[parameters('Allow connections from')]",
                    "protocol": "Tcp",
                    "destinationPortRange": "443",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*"
                }
            },
            {
                "name": "default-allow-mps-port8000",
                "properties": {
                    "priority": 1002,
                    "sourceAddressPrefix": "[parameters('Allow connections from')]",
                    "protocol": "Tcp",
                    "destinationPortRange": "8000",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*"
                }
            },
            {
                "name": "default-allow-rdp",
                "properties": {
                    "priority": 1003,
                    "sourceAddressPrefix": "[parameters('Allow connections from')]",
                    "protocol": "Tcp",
                    "destinationPortRange": "3389",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*"
                }
            },
            {
                "name": "default-allow-appgw-traffic",
                "properties": {
                    "priority": 1004,
                    "sourceAddressPrefix": "*",
                    "protocol": "*",
                    "destinationPortRange": "65200-65535",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*"
                }
            }
        ]
      }
    },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]" 
            ],
            "apiVersion": "2017-06-01",
            "tags": {
                "Description": "Virtual network for the MATLAB Production Server reference architecture",
                "provider": "[variables('providerID')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetPrefix')]",
                            "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
                        }
                    },
                    {
                        "name": "[variables('appGwSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('appGwSubnetPrefix')]",
                            "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-06-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIPAddressNameMachine')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "Description": "Public IP Address of the MATLAB Production Server Console",
                "provider": "[variables('providerID')]"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "apiVersion": "2016-03-30",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('licservernicName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressNameMachine'))]",
                "[concat('Microsoft.Network/virtualNetworks/',variables('virtualNetworkName'))]"
            ],
            "tags": {
                "Description": "Network Interface Card (NIC) for the server machine",
                "provider": "[variables('providerID')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressNameMachine'))]"
                            },
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('vmName')]",
            "tags": {
                "Description": "Virtual machine running the MATLAB Production Server Cloud Console and the license manager",
                "provider": "[variables('providerID')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/',variables('licservernicName'))]",
                "[concat('Microsoft.Network/virtualNetworks/',variables('virtualNetworkName'))]",
                "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]"
            ],
            "location": "[resourceGroup().location]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1"
                },
                "osProfile": {
                    "computerName": "[variables('vmName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "mathworks-inc",
                        "offer": "mps-ref-arch-18a-v1_0_0-linux-disk1",
                        "sku": "mps-ref-arch-18a-v1-linux-disk1-sku",
                        "version": "2.2.0"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('licservernicName'))]"
                        }
                    ]
                }
            },
            "plan": {
                "name": "mps-ref-arch-18a-v1-linux-disk1-sku",
                "publisher": "mathworks-inc",
                "product": "mps-ref-arch-18a-v1_0_0-linux-disk1"
            },
            "resources": [
                {
                    "apiVersion": "2017-03-30",
                    "type": "extensions",
                    "name": "config-app",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[concat('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
                    ],
                    "tags": {
                        "displayName": "config-app",
                        "provider": "[variables('providerID')]"
                    },
                    "properties": {
                        "publisher": "Microsoft.Compute",
                        "type": "CustomScriptExtension",
                        "typeHandlerVersion": "1.4",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "https://raw.githubusercontent.com/mathworks-ref-arch/matlab-production-server-on-azure/master/releases/R2018b%20and%20older/scripts/initScript.ps1"
                            ]
                        },
                        "protectedSettings": {
                            "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File initScript.ps1 -storageAccountName ' ,variables('storageAccountName'), ' -storageAccountKey ', listKeys(variables('storageAccountName'), '2016-12-01').keys[0].value , ' -mpsEndPoint ', concat('https://',reference(variables('appGwPublicIPAddressName')).dnsSettings.fqdn), ' -CIDRRange ', ' 10.0.0.0/24' )]"
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('appGwPublicIPAddressName')]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2017-10-01",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[variables('mpsDNSName')]"
                }
            },
            "tags": {
                "Description": "Application gateway public IP",
                "provider": "[variables('providerID')]"
            }
        },
        {
            "type": "Microsoft.Network/applicationGateways",
            "name": "[variables('appGwName')]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2017-10-01",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                "[concat('Microsoft.Network/publicIPAddresses/', variables('appGwPublicIPAddressName'))]"
            ],
            "tags": {
                "Description": "Application Gateway",
                "provider": "[variables('providerID')]"
            },
            "properties": {
                "sku": {
                    "name": "[variables('AppGatewaySize')]",
                    "tier": "Standard",
                    "capacity": "[variables('AppGatewayCount')]"
                },
                "sslCertificates": [
                    {
                        "name": "appGatewayFrontEndSslCert",
                        "properties": {
                            "data": "[variables('frontendCertData')]",
                            "password": "[variables('frontendCertPassword')]"
                        }
                    }
                ],
                "gatewayIPConfigurations": [
                    {
                        "name": "appGwIpConfig",
                        "properties": {
                            "subnet": {
                                "id": "[variables('appGwSubnetID')]"
                            }
                        }
                    }
                ],
                "frontendIPConfigurations": [
                    {
                        "name": "appGwFrontendIP",
                        "properties": {
                            "PublicIPAddress": {
                                "id": "[variables('appGwPublicIPAddressID')]"
                            }
                        }
                    }
                ],
                "frontendPorts": [
                    {
                        "name": "mpsHttpPort",
                        "properties": {
                            "Port": "[variables('mpsFrontEndPort')]"
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[variables('appGwBePoolName')]"
                    }
                ],
                "backendHttpSettingsCollection": [
                    {
                        "name": "appGwBackendMPSHttpSettings",
                        "properties": {
                            "Port": "[variables('mpsHttpPortVar')]",
                            "Protocol": "Http",
                            "requestTimeout": 110,
                            "CookieBasedAffinity": "Enabled",
                            "probe": {
                                "id": "[concat(variables('appGwID'),'/probes/mpsfileprobe')]"
                            }
                        }
                    }
                ],
                "httpListeners": [
                    {
                        "name": "MPSGwHttpListener",
                        "properties": {
                            "FrontendIPConfiguration": {
                                "Id": "[concat(variables('appGwID'), '/frontendIPConfigurations/appGwFrontendIP')]"
                            },
                            "FrontendPort": {
                                "Id": "[concat(variables('appGwID'), '/frontendPorts/mpsHttpPort')]"
                            },
                            "Protocol": "Https",
                            "SslCertificate": {
                                "Id": "[concat(variables('applicationGatewayID'), '/sslCertificates/appGatewayFrontEndSslCert')]"
                            }
                        }
                    }
                ],
                "requestRoutingRules": [
                    {
                        "Name": "rule2",
                        "properties": {
                            "RuleType": "Basic",
                            "httpListener": {
                                "id": "[concat(variables('appGwID'), '/httpListeners/MPSGwHttpListener')]"
                            },
                            "backendAddressPool": {
                                "id": "[concat(variables('appGwID'), '/backendAddressPools/', variables('appGwBePoolName'))]"
                            },
                            "backendHttpSettings": {
                                "id": "[concat(variables('appGwID'), '/backendHttpSettingsCollection/appGwBackendMPSHttpSettings')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "mpsfileprobe",
                        "properties": {
                            "protocol": "Http",
                            "host": "127.0.0.1",
                            "path": "/~files/hello.html",
                            "interval": 30,
                            "timeout": 30,
                            "unhealthyThreshold": 3
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachineScaleSets",
            "name": "[variables('namingInfix')]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2017-03-30",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                "[concat('Microsoft.Network/applicationGateways/', variables('appGwName'))]"
            ],
            "tags": {
                "Description": "VM Scale set that controls how many instances are running",
                "provider": "[variables('providerID')]"
            },
            "sku": {
                "name": "[parameters('Server VM Instance Size')]",
                "tier": "Standard",
                "capacity": "[parameters('instanceCount')]"
            },
            "plan": {
                "name": "mps-ref-arch-18a-v1-linux-disk2-sku",
                "publisher": "mathworks-inc",
                "product": "mps-ref-arch-18a-v1-linux-disk2"
            },
            "properties": {
                "overprovision": "true",
                "upgradePolicy": {
                    "mode": "Manual"
                },
                "virtualMachineProfile": {
                     "storageProfile": {
                        "imageReference": {
                            "publisher": "mathworks-inc",
                            "offer": "mps-ref-arch-18a-v1-linux-disk2",
                            "sku": "mps-ref-arch-18a-v1-linux-disk2-sku",
                            "version": "2.0.0"
                        },
                        "osDisk": {
                            "createOption": "fromImage",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS"
                            }
                        },
                        "dataDisks": []
                    },
                    "osProfile": {
                        "computerNamePrefix": "[variables('namingInfix')]",
                        "adminUsername": "[parameters('adminUsername')]",
                        "adminPassword": "[parameters('adminPassword')]"
                    },
                    "networkProfile": {
                        "networkInterfaceConfigurations": [
                            {
                                "name": "[variables('nicName')]",
                                "properties": {
                                    "primary": "true",
                                    "ipConfigurations": [
                                        {
                                            "name": "[variables('ipConfigName')]",
                                            "properties": {
                                                "subnet": {
                                                    "id": "[concat('/subscriptions/', subscription().subscriptionId,'/resourceGroups/', resourceGroup().name, '/providers/Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'), '/subnets/', variables('subnetName'))]"
                                                },
                                                "ApplicationGatewayBackendAddressPools": [
                                                    {
                                                        "id": "[concat('/subscriptions/', subscription().subscriptionId,'/resourceGroups/', resourceGroup().name, '/providers/Microsoft.Network/applicationGateways/', variables('appGwName'), '/backendAddressPools/', variables('appGwBePoolName'))]"
                                                    }
                                                ]
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                }
            }
        },
        {
            "name": "[variables('storageAccountName')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2017-06-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "Description": "Storage account where solution logs are stored",
                "provider": "[variables('providerID')]"
            },
            "sku": {
                "name": "[variables('storageAccountType')]"
            },
            "kind": "storage",
            "properties": {}
        },
        {
            "name": "[concat('pid-', toLower(variables('providerID')))]",
            "apiVersion": "2017-05-10",
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": []
                }
            }
        }
    ],
    "outputs": {
        "dashboardlocation": {
            "value": "[concat('https://',reference(variables('publicIPAddressNameMachine')).ipAddress)]",
            "type": "string"
        }
    }
}
